Added some motivation to keep EFT EW as they are, to be discussed
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@229 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -137,16 +137,18 @@ mediator particles), it is a starting point to prepare a set of
 distinct but yet complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
-%CD: added after Rizzo's comments. Not sure it belongs here
-Contact interaction operators (EFTs) are also suggested wherever 
-neither a simplified model completion nor simplified model operators 
-yielding similar kinematic distributions are available.
+Contact interaction operators (EFTs) are also part of this report, 
+to be considered whenever neither a simplified model completion nor other simplified models 
+yielding similar kinematic distributions are available. 
 This is the case for dimension 5-7 operators with direct 
 Dark Matter-electroweak boson couplings. 
 Model-independent results should be emphasized 
 in the signal regions that are unique to these models, 
 and results should be considered with the necessary caution due to EFT 
 validity issues covered in the last chapter in this report. 
+Results from these models may nevertheless help validating the 
+contact interaction limit of new simplified models developed to complete 
+these specific operators. 
 
 \section{Structure of this document}
 
@@ -166,11 +168,21 @@ boson ($W/Z/gamma/H$).
 Simplified models from chapter~\ref{subsec:MonojetLikeModels}
 are considered, together with specific simplified models leading to mono-boson signatures
 and contact interaction operators wherever simplified models are not available. 
-The technical implementation and further models that can be studied
-beyond early searches are in appendix~\ref{app:EWSpecificModels_Appendix}. 
 The final chapter is devoted to the treatment of the validity of benchmark
 models from contact interaction operators.
+The technical implementation and further models that can be studied
+beyond early searches are in appendix~\ref{app:EWSpecificModels_Appendix}. 
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
+
+%%This could be saved for monotop
+%Appendix~\ref{app:ExtraModels} contains a series of models that produce interesting \MET{}+X signatures. 
+%These models are not specifically recommended by the Forum as they
+% deviate from the general assumptions made in this introduction. 
+%They have however been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
+%They are therefore worth considering for early Run-2 searches, since they lead to unique signatures 
+%that are not produced by any other of the recommended models. 
+%\fi
+
 
 
