for tom's comments on spin-2
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@230 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -781,7 +781,12 @@ The advantage of doing this is in the fact that no event selection and detector 
 
 \section{Spin-2 mediator}
 
-In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the Standard Model and dark sector physics. Below a few~\tev in mediator mass, production of a graviton with universal couplings is dominantly gluon-initiated, leading to forward-peaked angular distributions \cite{Allanach:2002gn} distinct from the other models considered above. This kind of model was not studied in the forum and is not included in the recommendations, but it and models such as Ref.~\cite{Lee:2013bua} may warrant further study on a longer timescale. 
+In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the Standard Model and dark sector physics. This kind of model was not studied in the forum and is not included in the recommendations, but it and models such as Ref.~\cite{Lee:2013bua} may warrant further study on a longer timescale. 
 
+% \begin{figure}
+%   \centering
+%   \includegraphics[width=\linewidth]{figures/monojet/comparison_G_mDM10.pdf}
+%   \caption{Angular distributions of the total production for 0.5~\tev and 3~\tev graviton mediators for $\mDM=10$~\gev.}
+% \end{figure}
 
-
+% Below a few~\tev in mediator mass, production of a graviton with universal couplings is dominantly gluon-initiated. For heavy mediators, however, up to half of the production occurs through a qq-initiated diagram, leading to a large forward-peaked component of the production \cite{Allanach:2002gn}. For example, Fig.~\ref{fig:gravitoncomparison} shows a calculation of the angular distributions of the total production for 0.5~\tev and 3~\tev graviton mediators in the light WIMP limit ($\mDM=10$~\gev). 
