first pass of appendix on sasha's model
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@231 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -59,6 +59,88 @@ which then mixes with a Higgs-sector field, and couples to W and Z bosons.
 This diagram contains 2 insertions of EW symmetry breaking fields, 
 corresponding in form to the effective dimension-5 operator in Section~\ref{sub:EW_EFT_Dim5}.   
 
+\section{Inert 2HDM Model}\label{sec:i2HDM}
+
+The idea of an inert Two-Higgs Doublet Model (i2HDM) has been
+initially mentioned more than 30 year ago in~\cite{Deshpande:1977rw}
+an surprisingly since so many years yet has not been explored with
+respect to collider signatures and complementary probes of DM in
+direct and indirect DM search experiments. Here we would like to
+motivate i2HDM and its exploration.
+
+For most of the simplified models included in this report, the mass of the mediator and potentially its width are a non-trivial parameters of the model. In these scenarios, we remain agnostic about the theory behind the dark matter sector and try to parametrize it in simple terms. We have not addressed how to extend the simplified models to realistic and viable models which are consistent with the symmetries of the Standard Model.
+
+Simplified models often violate gauge invariance which is a crucial
+principle for building a consistent BSM model which incorporates SM
+together with new physics. For example, considering a simplified model
+with a new heavy gauge vector boson mediating DM interactions, one should
+also introduce mechanism which provides the mass to this mediator in a
+gauge invariant way, which requires necessarily introduction
+additional sector into the model. This approach makes a next logical
+step to consider Minimal Consistent Dark Matter (MCDM) models. MCDM
+models can be understood as a toy models still. On the other hand,
+a particular MCDM model can be easily incorporated into a bigger BSM
+model and be explored via complementary constraints from collider and
+direct/indirect DM search experiments as well as relic density
+constraints.  We explore i2HDM as one of the appealing representative
+of MCDM models and present its important features different from the
+simplified models.
+
+The i2HDM \cite{Deshpande:1977rw,LopezHonorez:2006gr,Dolle:2009fn,Goudelis:2013uca} is an extension of the SM with a second scalar doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, under which $\phi_2$ is odd and all the other fields are even. 
+The Lagrangian of the odd sector is,
+  \begin{equation}
+  \mathcal{L} = \frac{1}{2}(D_{\mu}\phi_2)^2 -V(\phi_1,\phi_2)
+  \end{equation}
+with the  potential $V$  containing mass terms and $\phi_1 - \phi_2$
+interactions:
+\begin{eqnarray}
+  V &=& -m_1^2 (\phi_1^{\dagger}\phi_1) - m_2^2 (\phi_2^{\dagger}\phi_2) + \lambda_1 (\phi_1^{\dagger}\phi_1)^2 + \lambda_2 (\phi_2^{\dagger}\phi_2)^2    \nonumber  \\
+  &+&  \lambda_3(\phi_2^{\dagger}\phi_2)(\phi_1^{\dagger}\phi_1)  + \lambda_4(\phi_2^{\dagger}\phi_1)(\phi_1^{\dagger}\phi_2) + 
+  \frac{\lambda_5}{2}\left[(\phi_1^{\dagger}\phi_2)^2 + (\phi_2^{\dagger}\phi_1)^2 \right],
+\end{eqnarray}
+where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carrying the same hypercharge. These doublets can be parameterised as
+\begin{equation}
+\phi_1=\frac{1}{\sqrt{2}}
+\begin{pmatrix}
+0\\
+v+H 
+\end{pmatrix}
+  \qquad
+  \phi_2= \frac{1}{\sqrt{2}}
+\begin{pmatrix}
+ \sqrt{2}{h^+} \\
+ h_1 + ih_2
+\end{pmatrix}
+\end{equation}
+One can see that a $\phi_2 \rightarrow -\phi_2$ discrete symmetry in
+case of absence of $\phi_2$ coupling with fermions and provides
+stability of the lightest field of the doublet, which is identified as
+the dark matter candidate which also couples to $Z$ boson.
+
+In addition to the SM, i2HDM bring eventually four more degrees of
+freedom coming from the inert doublet in the form of $Z_2$-odd charged
+scalar $\textrm{h}^\pm$ and two neutral $Z_2$-odd scalars
+$\textrm{h}_1$ and $\textrm{h}_2$. The lightest neutral scalar, $h_1$
+is identified as the dark matter candidate.
+
+The i2HDM have several other attractive features. On one hand its DM
+sector can induce electroweak symmetry breaking \cite{Hambye:2007vf}
+while on the other hand it provides mechanism of generating neutrino
+masses from radiative corrections \cite{Ma:2006km}. It is also
+possible to embed this model in a SO(10) scenario
+\cite{Kadastik:2009dj}, with $Z_{2}$ been identified with matter
+parity $(-1)^{3(B-L)}$, or in the Universal Extra Dimension scenario
+\cite{Hooper:2007qk}, with the $Z_{2}$ identified with the KK parity.
+This model can also give rise to an improved naturalness
+\cite{Barbieri:2006dq} since large radiative corrections from the
+inert Higgs can `screen` the SM Higgs contribution to the electroweak
+parameter $\Delta T$. The i2HDM model has been explored at the
+phenomenological level from the perspective of collider DM searches
+\cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela}, but there is
+presently no dedicated experimental analysis.
+
+
+
 \section{Tabulated cross-sections}
 
 \subsection{photon+MET signal, \schannel vector mediator model}
