--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1271,8 +1271,8 @@
 @article{Allanach:2002gn,
       author         = "Allanach, B.C. and Odagiri, K. and Palmer, M.J. and
                         Parker, Michael Andrew and Sabetfakhri, A. and others",
-      title          = "{Exploring small extra dimensions at the large hadron
-                        collider}",
+      title          = "Exploring small extra dimensions at the {Large Hadron
+                        Collider}",
       journal        = "JHEP",
       volume         = "0212",
       pages          = "039",
