incorporate Peskin's suggestions for intro
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@233 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -2,7 +2,7 @@
 
 In this Section, we consider models with a photon, a W boson, a Z boson or a Higgs boson in the final state,
 accompanied by Dark Matter particles that either couple directly to the boson or are mediated by
-a new particle. The experimental signature is identified as \textit{V+MET}.
+a new particle. The experimental signature is identified as \textit{V+\MET}.
 
 These models are interesting both as some are demanded by gauge coupling relations in models where the gluon provides
 the experimentally detectable signature,
