--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1465,3 +1465,18 @@
                         MPP-2011-68",
       SLACcitation   = "%%CITATION = ARXIV:1108.2040;%%",
 }
+@article{Alwall:2008ag,
+      author         = "Alwall, Johan and Schuster, Philip and Toro, Natalia",
+      title          = "{Simplified Models for a First Characterization of New
+                        Physics at the LHC}",
+      journal        = "Phys.Rev.",
+      volume         = "D79",
+      pages          = "075020",
+      doi            = "10.1103/PhysRevD.79.075020",
+      year           = "2009",
+      eprint         = "0810.3921",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-13425, SU-ITP-08-24",
+      SLACcitation   = "%%CITATION = ARXIV:0810.3921;%%",
+}
