--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -4,76 +4,84 @@
 {$LastChangedRevision$}
 {$LastChangedBy$}
 \svnid{$Id$}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyhead[ol]{\svnrev;\svndate;\svnauthor}
 
 Dark matter has not yet been seen in particle physics experiments, and
-there is not yet any evidence for non-gravitational interactions between dark
-matter and Standard Model particles.  If such interactions exist,
-pairs of dark matter particles could be produced at the LHC, leading
-to signatures including one or more hard objects~\footnote{In the case of a single hard object, 
-	these signatures are commonly called 'mono-X'.} in association with
-missing transverse energy (\MET{} + X). 
+there is not yet any evidence for non-gravitational interactions
+between dark matter and Standard Model particles.  If such
+interactions exist, pairs of dark matter particles could be produced
+at the LHC. Dark matter particles do not produce signals in the LHC
+detectors, so simple pair-production of dark matter particles would
+not be visible. However, there are many ways for a quark or gluon to
+emit a visible particle (X = g, q, gamma, Z, W, or h) before
+annihilating to form a dark matter pair. Such reactions, which are
+seen as particles or jets recoiling against an invisible state, are
+called ``mono-X'' or \MET{}+X reactions.
 
 Early Run 1 searches for \MET{}+X signatures at ATLAS and CMS employed
 a set of effective field theories (EFTs) \cite{Goodman:2010ku} to
-model the possible signals. If a contact interaction is the correct
-description of dark matter pair production at colliders, the missing
+model the possible signals. These EFTs assume that production of dark
+matter takes place through a contact interaction involving two quarks
+or gluons and two dark matter particles. In this case, the missing
 energy distribution of the signal depends only on the mass of the dark
-matter particles and the spin structure of the interaction; only the
+matter particles and the spin structure of the interaction. Only the
 overall rate is a free parameter. Both experiments studied a variety
-EFTs with different spin structures. Provided the contact interaction
-approximation holds, these EFTs also provide a straightforward way to
-translate results amongst LHC results and the different types of
-non-collider searches for dark matter.
+EFTs with different spin structures. Provided that the contact
+interaction approximation holds, these EFTs also provide a
+straightforward way to compare results amongst different collider
+searches and with non-collider searches for dark matter.
 
-From the Run 1 results, however, it has become clear
-\cite{Busoni:2013lha} that a contact interaction is often not the
-correct description for the signals to which the LHC is truly
-sensitive. The LHC is exploring a regime where the mediating process
-may play a significant role, leading to signals that can
-be kinematically distinct from those predicted by the EFT, as well as
-qualitatively different signatures requiring new search
-strategies. While the EFT integrates out the degrees of freedom of the
-(heavy) intermediate particle, ``simplified models''
-\cite{Alves:2011wf} with directly-accessible mediators describe this
-richer phenomenology. Such models can be used both to interpret \MET{}+X
-searches and to guide the design of complementary searches for
-additional signatures. 
+Nevertheless, it has become clear \cite{Busoni:2013lha} that a contact
+interaction is often not the correct description for the signals to
+which the LHC is sensitive. Limits from the LHC on particles that do
+not couple to QCD and do not decay to hard leptons are relatively
+weak. Such particles can mediate reactions that produce dark matter
+particles. If the mass of the mediator is light, the kinematics of the
+pair-production reaction will differ from that due to a contact
+interaction, requiring new search strategies. While the EFT integrates
+out the degrees of freedom of the (heavy) intermediate particle,
+``simplified models'' \cite{Alwall:2008ag,Alves:2011wf} with
+directly-accessible mediators describe this richer
+phenomenology. Appropriate simplified models can be used both to
+interpret mono-X searches and to guide the design of complementary
+searches for additional signatures.
 
 Many proposals for such models began to emerge, for example
-Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}
-and, at the end of 2014, ATLAS and CMS organized a forum, the
-ATLAS-CMS Dark Matter Forum, to form a consensus with the
-participation of experts on theories of dark matter. This is the final
-report of that forum.
+Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}. At
+the end of 2014, ATLAS and CMS organized a forum, the ATLAS-CMS Dark
+Matter Forum, to form a consensus with the participation of experts on
+theories of dark matter. This is the final report of that forum.
 
 One of the guiding principles of this report is to channel the efforts
 of the ATLAS and CMS Collaboration towards a minimal set of dark
 matter models that should influence the design of the early Run-2
-searches, rather than providing exhaustive and elaborate
-interpretations and re-interpretations of the results. At the same
-time, a thorough survey of realistic collider signals of dark matter
-is a crucial input to the overall design of the search program.
+searches. At the same time, a thorough survey of realistic collider
+signals of dark matter is a crucial input to the overall design of the
+search program.
 
 The goal of this report is such a survey, though confined within some
 broad assumptions and focused on benchmarks for kinematically-distinct
 signals which are most urgently needed. As far as time and resources
 have allowed, the assumptions have been carefully motivated by
-theoretical consensus and comparisons of simulation. But to achieve a
+theoretical consensus and comparisons of simulations. But to achieve a
 true consensus with only a few months before Run 2 would begin, it was
 important to narrow the scope and timescale to the following:
 
 \begin{enumerate}
-\item A prioritized, small set of benchmark simplified models should
-  be agreed upon by both collaborations for Run-2 searches.
-\item The matrix element implementation of the simplified models
-  should be standardized, and other common technical details (order of
-  the calculation, showering) harmonized as much as practical. The forum should 
-  outline a common choice of LO/NLO, ME-parton
+\item The forum should propose a prioritized, small set of benchmark
+  simplified models should be agreed upon by both collaborations for
+  Run-2 searches.
+\item The forum should standardize the matrix element implementation
+  of the simplified models and harmonize other common technical
+  details (order of the calculation, showering) as far as practical. It
+  would be desirable to have a common choice of LO/NLO, ME-parton
   shower matching and merging, factorization and renormalization
-  scales for each of the simplified models. This leads to a
+  scales for each of the simplified models. This will also lead to a
   single set of theory uncertainties, which will be easier to deal
   with when comparing results from the two collaborations.
-\item The forum should also discuss the conditions under which the EFT
+\item The forum could also discuss the conditions under which the EFT
   interpretation may still be desirable.
 \item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
@@ -85,44 +93,51 @@ important to narrow the scope and timescale to the following:
 \section{Grounding Assumptions}
 
 The first choice made for the Run-2 benchmarks is on the nature of the
-Dark Matter itself: it is assumed to be a particle, stable on collider
-timescales and non-interacting with the detector, and a Dirac fermion.
-The latter is a practical choice, given that the Forum relied upon a
-large body of theoretical work which made this assumption. Many of the
-conclusions in this report also apply to \MET{} signals of
-Majorana fermion DM or scalar DM with some minor modification to
-account for their different angular distributions, especially when
-considering cut-and-count analyses. Thus the choice of Dirac fermion
-dark matter is deemed sufficient for the benchmarks aiding the design
-of the upcoming Run-2 searches. Nevertheless, a more complete set of
-models will certainly be required upon a discovery, as physics observables
-may be used to distinguish the spin of the DM particle~\cite{Crivellin:2015wva}. 
+Dark Matter itself: it is assumed to be a single particle, stable on
+collider timescales and non-interacting with the detector, and a Dirac
+fermion.  The former assumption is reductionistic. The rich particle
+content of the Standard Model is circumstantial evidence that the dark
+matter sector, which constitutes five times as much of the mass of the
+universe, may be more complex than a single particle or a single
+interaction. But, as was often the case in the discoveries of the SM,
+here only one mediator and one search channel might play a dominant
+role in the opening stages of an LHC discovery. The latter assumption
+is a practical choice, given that the Forum relied upon a large body
+of theoretical work which made this assumption. The choice of Dirac
+fermions permits some processes forbidden for Majorana fermions. Aside
+from this, the cases of Dirac or Majorana fermions or scalars produces
+only minor changes in the kinematic distributions of the visible
+particle, especially when considering cut-and-count analysis. Thus the
+choice of Dirac fermion dark matter is deemed sufficient for the
+benchmarks aiding the design of the upcoming Run-2
+searches. Nevertheless, a more complete set of models will certainly
+be required upon a discovery; see e.g.~\cite{Crivellin:2015wva} for an
+example of an observable that may distinguish the spin of the DM
+particle.
 
 We also assume that Minimal Flavor Violation (MFV) applies to the
-recommended models. This means that the flavor structure of the
-couplings between dark matter and ordinary particles follows the
-structure as the Standard Model. This choice is both natural, as there
-is no required additional theory of flavor beyond what is already
-present in the SM, and and it ensures that the
-models do not violate flavor constraints.  As a consequence, spin-0
-resonances exchanged in the \schannel must have Yukawa couplings to SM
-fermions. Flavor-safe models can still be constructed beyond the MFV
+recommended models. By this, we mean that the flavor structure of the
+couplings between dark matter and ordinary particles follows the same
+structure as the Standard Model. This choice is simple, since no
+additional theory of flavor is required, beyond what is already
+present in the SM, and it provides a mechanism to ensure that the
+models do not violate flavor constraints.  As a consequence, spin 0
+resonances exchanged in the \schannel must have couplings to fermions proportional to the SM Higgs couplings. Flavor-safe models can still be constructed beyond the MFV
 assumption~\cite{Agrawal:2014aoa}, but their phenomenology is left for
 future studies.
 %cite Dolan:2014ska? Also DM@LHC report, if out in time. 
 
 In the parameter scan for the recommended models, we make the
 assumption of minimal width for the particles mediating the
-interaction between SM and DM.  This means that only the decays that
-are strictly necessary for the self-consistency of the model (e.g.  to
-DM and to quarks) are accounted for in the definition of the mediator
-width. In turn, this forbids any further decays of the mediator to other invisible
-particles of the Dark Sector that may increase its width. However,
-studies within the Forum show that, for many models in the cut and count analyses, the
-kinematic distributions and therefore the sensitivity
-of the search do not depend significantly on the mediator width up to
-extreme values where the particle nature of the mediator comes into
-question.
+interaction between SM and DM.  By this, we mean that only decays
+strictly necessary for the self-consistency of the model (e.g.  to DM
+and to quarks) are accounted for in the definition of the mediator
+width. We forbid any further decays to other invisible particles of
+the Dark Sector that may increase the width. Studies within the Forum
+show that, for cut and count analyses, the kinematic distributions of
+many models and therefore the sensitivity of the search do not depend
+significantly on the mediator width, as long as the width remains less
+than the mass of the particle.
 
 The particle content of the models chosen as benchmarks is limited to
 one single kind of DM whose self-interactions are not relevant for LHC
