addressing part of uli's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@234 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -26,14 +26,14 @@ model the possible signals. These EFTs assume that production of dark
 matter takes place through a contact interaction involving two quarks
 or gluons and two dark matter particles. In this case, the missing
 energy distribution of the signal depends only on the mass of the dark
-matter particles and the spin structure of the interaction. Only the
+matter particles and the Lorentz structure of the interaction. Only the
 overall rate is a free parameter. Both experiments studied a variety
 EFTs with different spin structures. Provided that the contact
 interaction approximation holds, these EFTs also provide a
 straightforward way to compare results amongst different collider
 searches and with non-collider searches for dark matter.
 
-Nevertheless, it has become clear \cite{Busoni:2013lha} that a contact
+Nevertheless, it has become clear \cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Busoni:2013lha} that a contact
 interaction is often not the correct description for the signals to
 which the LHC is sensitive. Limits from the LHC on particles that do
 not couple to QCD and do not decay to hard leptons are relatively
@@ -49,7 +49,7 @@ interpret mono-X searches and to guide the design of complementary
 searches for additional signatures.
 
 Many proposals for such models began to emerge, for example
-Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba}. At
+Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa}. At
 the end of 2014, ATLAS and CMS organized a forum, the ATLAS-CMS Dark
 Matter Forum, to form a consensus with the participation of experts on
 theories of dark matter. This is the final report of that forum.
@@ -102,20 +102,23 @@ universe, may be more complex than a single particle or a single
 interaction. But, as was often the case in the discoveries of the SM,
 here only one mediator and one search channel might play a dominant
 role in the opening stages of an LHC discovery. The latter assumption
-is a practical choice, given that the Forum relied upon a large body
-of theoretical work which made this assumption. The choice of Dirac
-fermions permits some processes forbidden for Majorana fermions. Aside
-from this, the cases of Dirac or Majorana fermions or scalars produces
-only minor changes in the kinematic distributions of the visible
-particle, especially when considering cut-and-count analysis. Thus the
-choice of Dirac fermion dark matter is deemed sufficient for the
-benchmarks aiding the design of the upcoming Run-2
-searches. Nevertheless, a more complete set of models will certainly
-be required upon a discovery; see e.g.~\cite{Crivellin:2015wva} for an
-example of an observable that may distinguish the spin of the DM
-particle.
+focuses our work on early LHC searches, where small kinematic
+differences between models will not matter in a discovery scenario,
+and with the imminent re-start of the LHC our report relies heavily on
+a large body of existing theoretical work which made this
+assumption. Different types of dark matter particles will typically
+give similar results. The choice of Dirac fermions permits some
+processes forbidden for Majorana fermions. Aside from this, the cases
+of Dirac or Majorana fermions or scalars produces only minor changes
+in the kinematic distributions of the visible particle, especially
+when considering cut-and-count analysis. Thus the choice of Dirac
+fermion dark matter is deemed sufficient for the benchmarks aiding the
+design of the upcoming Run-2 searches. Nevertheless, a more complete
+set of models will certainly be required upon a discovery; see
+e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva,} for some
+studies of observables that may distinguish amongst these models.
 
-We also assume that Minimal Flavor Violation (MFV) applies to the
+We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
 recommended models. By this, we mean that the flavor structure of the
 couplings between dark matter and ordinary particles follows the same
 structure as the Standard Model. This choice is simple, since no
@@ -123,8 +126,7 @@ additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin 0
 resonances exchanged in the \schannel must have couplings to fermions proportional to the SM Higgs couplings. Flavor-safe models can still be constructed beyond the MFV
-assumption~\cite{Agrawal:2014aoa}, but their phenomenology is left for
-future studies.
+assumption, for example ~\cite{Agrawal:2014aoa}, and deserve worth further study.
 %cite Dolan:2014ska? Also DM@LHC report, if out in time. 
 
 In the parameter scan for the recommended models, we make the
