--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1480,3 +1480,143 @@
       reportNumber   = "SLAC-PUB-13425, SU-ITP-08-24",
       SLACcitation   = "%%CITATION = ARXIV:0810.3921;%%",
 }
+@article{Fox:2011pm,
+      author         = "Fox, Patrick J. and Harnik, Roni and Kopp, Joachim and
+                        Tsai, Yuhsin",
+      title          = "{Missing Energy Signatures of Dark Matter at the LHC}",
+      journal        = "Phys.Rev.",
+      volume         = "D85",
+      pages          = "056011",
+      doi            = "10.1103/PhysRevD.85.056011",
+      year           = "2012",
+      eprint         = "1109.4398",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-478-T",
+      SLACcitation   = "%%CITATION = ARXIV:1109.4398;%%",
+}
+@article{Bai:2010hh,
+      author         = "Bai, Yang and Fox, Patrick J. and Harnik, Roni",
+      title          = "{The Tevatron at the Frontier of Dark Matter Direct
+                        Detection}",
+      journal        = "JHEP",
+      volume         = "1012",
+      pages          = "048",
+      doi            = "10.1007/JHEP12(2010)048",
+      year           = "2010",
+      eprint         = "1005.3797",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-10-143-T",
+      SLACcitation   = "%%CITATION = ARXIV:1005.3797;%%",
+}
+@article{Kopp:2011eu,
+      author         = "Kopp, Joachim",
+      title          = "{Collider Limits on Dark Matter}",
+      year           = "2011",
+      eprint         = "1105.3248",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-CONF-11-219-T",
+      SLACcitation   = "%%CITATION = ARXIV:1105.3248;%%",
+}
+@article{Fox:2011fx,
+      author         = "Fox, Patrick J. and Harnik, Roni and Kopp, Joachim and
+                        Tsai, Yuhsin",
+      title          = "{LEP Shines Light on Dark Matter}",
+      journal        = "Phys.Rev.",
+      volume         = "D84",
+      pages          = "014028",
+      doi            = "10.1103/PhysRevD.84.014028",
+      year           = "2011",
+      eprint         = "1103.0240",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-039-T",
+      SLACcitation   = "%%CITATION = ARXIV:1103.0240;%%",
+}
+@article{Cotta:2012nj,
+      author         = "Cotta, R.C. and Hewett, J.L. and Le, M.P. and Rizzo,
+                        T.G.",
+      title          = "{Bounds on Dark Matter Interactions with Electroweak
+                        Gauge Bosons}",
+      journal        = "Phys.Rev.",
+      volume         = "D88",
+      pages          = "116009",
+      doi            = "10.1103/PhysRevD.88.116009",
+      year           = "2013",
+      eprint         = "1210.0525",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1210.0525;%%",
+}
+@article{Haisch:2013fla,
+      author         = "Haisch, Ulrich and Hibbs, Anthony and Re, Emanuele",
+      title          = "{Determining the structure of dark-matter couplings at
+                        the LHC}",
+      journal        = "Phys.Rev.",
+      number         = "3",
+      volume         = "D89",
+      pages          = "034009",
+      doi            = "10.1103/PhysRevD.89.034009",
+      year           = "2014",
+      eprint         = "1311.7131",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "OUTP-13-23P",
+      SLACcitation   = "%%CITATION = ARXIV:1311.7131;%%",
+}
+@article{Chivukula:1987py,
+      author         = "Chivukula, R. Sekhar and Georgi, Howard",
+      title          = "{Composite Technicolor Standard Model}",
+      journal        = "Phys.Lett.",
+      volume         = "B188",
+      pages          = "99",
+      doi            = "10.1016/0370-2693(87)90713-1",
+      year           = "1987",
+      reportNumber   = "BUHEP-87-2, HUTP-87/A003",
+      SLACcitation   = "%%CITATION = PHLTA,B188,99;%%",
+}
+@article{Hall:1990ac,
+      author         = "Hall, L.J. and Randall, Lisa",
+      title          = "{Weak scale effective supersymmetry}",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "65",
+      pages          = "2939-2942",
+      doi            = "10.1103/PhysRevLett.65.2939",
+      year           = "1990",
+      reportNumber   = "UCB-PTH-90/13, LBL-28879",
+      SLACcitation   = "%%CITATION = PRLTA,65,2939;%%",
+}
+@article{Buras:2000dm,
+      author         = "Buras, A.J. and Gambino, P. and Gorbahn, M. and Jager, S.
+                        and Silvestrini, L.",
+      title          = "{Universal unitarity triangle and physics beyond the
+                        standard model}",
+      journal        = "Phys.Lett.",
+      volume         = "B500",
+      pages          = "161-167",
+      doi            = "10.1016/S0370-2693(01)00061-2",
+      year           = "2001",
+      eprint         = "hep-ph/0007085",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "TUM-HEP-379-00, CERN-TH-2000-190",
+      SLACcitation   = "%%CITATION = HEP-PH/0007085;%%",
+}
+@article{D'Ambrosio:2002ex,
+      author         = "D'Ambrosio, G. and Giudice, G.F. and Isidori, G. and
+                        Strumia, A.",
+      title          = "{Minimal flavor violation: An Effective field theory
+                        approach}",
+      journal        = "Nucl.Phys.",
+      volume         = "B645",
+      pages          = "155-187",
+      doi            = "10.1016/S0550-3213(02)00836-2",
+      year           = "2002",
+      eprint         = "hep-ph/0207036",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-2002-147, IFUP-TH-2002-17",
+      SLACcitation   = "%%CITATION = HEP-PH/0207036;%%",
+}
