--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -369,20 +369,9 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 	\label{fig:feyn_prod_S}
 \end{figure}
 
+In this section, we consider a parallel situation to the \modelDMV and \modelDMA mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\sidenote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga} which contain a thorough discussion of these models. 
 
-One of the simplest UV complete extensions of the effective field theory approach is the addition of a scalar/pseudoscalar mediator between DM and SM.
-A gauge singlet mediator can have tree-level interactions with a singlet DM particle that is either a Dirac or Majorana fermion, or DM that is a scalar itself. 
-The spin-$0$ mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle.  Refs.~\cite{Buckley:2014fba,Harris:2014hga} contain a thorough discussion of these models. One-loop diagrams leading to a \MET+X signature are shown in Fig.~\ref{fig:feyn_prod_S}.
-In this document we consider only two of the possible choices for this simplified model: one where the interaction with the SM is mediated by a real scalar, 
-and the second where we consider only a pseudoscalar for which the associated scalar is assumed to be decoupled at higher energies. Note that this assumption does not hold in a UV complete model where the two components of the complex scalar mediator would be approximately degenerate. As stated in the Introduction of this document,
-these models are deemed sufficient as a starting point for early Run-2 searches, but the complex scalar case could be studied 
-separately in the case of heavy flavor final states given the sufficiently different kinematics. 
-
-Couplings to the SM fermions can be arranged by mixing with the SM Higgs. Such models have interesting connections with Higgs physics, and can be viewed as generalizations of the Higgs portal to DM. The most general scalar mediator models will have renormalizable interactions between the SM Higgs and the new scalar $\phi$ or pseudoscalar $a$, as well as $\phi/a$ interactions with electroweak gauge bosons. Such interactions are model dependent, often subject to constraints from electroweak precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike, for instance, the $\MET+\textrm{jets}$ searches). We have therefore chosen, for this class of minimal simplified models with spin-$0$ mediators, to focus primarily on couplings to fermions only and loop-induced couplings to gluons. %Possible couplings to the electroweak sector may also lead to interesting DM phenomenology that can be studied in the context of Higgs Portal DM.
-
-%\subsection{Model and assumption for fermionic DM}
-
-Working under the assumption of Minimal Flavor Violation (MFV) implies scalar couplings to fermions are proportional to the fermion mass.  However, the overall normalization constant of this coupling can differ for for up- and down-type quarks and charged leptons. Assuming that DM is a fermion $\chiDM$ that couples to the SM only through a scalar $\phi$ or pseudoscalar $a$, the most general tree-level Lagrangians\footnote{Note that these includes couplings to leptons, while in the vector/axial-vector case discussed earlier this was resctricted to quarks only for historical reasons.} compatible with the MFV assumption are~\cite{Cotta:2013jna,Abdullah:2014lla}:
+Under MFV, spin-$0$ resonances look like an alternate-reality version of the SM Higgs. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically availabile, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
  \begin{eqnarray}
 {\cal L}_{\phi} & = &
@@ -395,23 +384,24 @@ g_\chiDM \phi \bar{\chiDM}\chiDM+ \frac{\phi}{\sqrt{2}} \sum_i \left(g_u y_i^u \
 ig_\chiDM a \bar{\chiDM}\gamma_5\chiDM+ \frac{i a}{\sqrt{2}}\sum_i  \left(g_u y_i^u \bar{u}_i \gamma_5 u_i+g_d y_i^d \bar{d}_i \gamma_5 d_i+ \right. \nonumber \\
 & & \left. g_\ell y_i^\ell   \bar{\ell}_i \gamma_5 \ell_i\right) \,. \label{eq:pseudoscalarlag}
 \end{eqnarray}
-Here, the sums run over the all SM generations; the Yukawa couplings $y_i^f$ are normalized to $y_i^f = \sqrt{2}m_i^f/v$ where $v \simeq 246 \, \gev$ represents the Higgs vacuum expectation value.
-While the couplings $g_u, g_d, g_\ell$ to SM fermions are factors multiplying
-the SM Yukawa structure,
-we parametrise the DM-mediator coupling as $g_\chiDM$, without any additional Yukawa structure between the mediator and the dark sector.
+where the Yukawa couplings $y_i^f$ are normalized to the Higgs vev as $y_i^f = \sqrt{2}m_i^f/v$. 
+
+The couplings to fermions are proportional to the SM Higgs couplings, yet one is still allowed to adjust an overall strength of the coupling to charged leptons and the relative couplings of $u$- and $d$-type quarks. As in the preceding sections, for the sake of simplicity and straightforward comparision, we reduce the couplings to the SM fermions to a single universal parameter $g_v \equiv g_u = g_d = g_\ell$  \sidenote{The contribution from $\tau^+\tau^-$ decays plays no role for most of the parameter space considered.}. In this framework on can compare the relative discovery and exclusion power of each search, though again we emphasize the importance of searching the full set of allowed channels in case violations of these simplifying assumptions lead to signficant modifications of the decay rates which unexpectedly favor different channels than the mix obtained under our assumptions. The coupling $g_\chiDM$ parameterises the entire dependence on the structure between the mediator and the dark sector.
 
 %The most general Lagrangians including new scalars or pseudoscalars will have a potential containing interactions with the SM Higgs field $h$. 
-As already stated we only choose a minimal set of interactions that do not include interactions with the SM Higgs field. 
-For simplicity and ease of comparison, we assume universal SM-mediator couplings $g_v \equiv g_u = g_d = g_\ell$ in the remainder of this work. This allows the relative discovery and exclusion power of each search to be directly compared, though again we emphasize the importance of multiple search channels, not an exclusive focus on the single, most powerful channel under the assumption of universal couplings. %If there is no indication otherwise the easiest assumptions is always the most scientific to chose (also listening to some phenomenologists this seems not always to be the case ;-) )  
+ %If there is no indication otherwise the easiest assumptions is always the most scientific to chose (also listening to some phenomenologists this seems not always to be the case ;-) )  
 
 Given these simplifications, the minimal set of parameters under consideration is
  \bea
   \left\{ m_\chiDM,~ m_{\phi/a},~ g_\chiDM,~ g_v \right\} \,.
  \eea
+
+Fig.~\ref{fig:feyn_prod_S} shows the one-loop diagrams producing a \MET+X signature.
+
 %The simplest choice of couplings, known as Minimal Simplified Dark Matter model (MSDM) \textbf{[TODO: add references]}, is $g_u = g_d = g_\ell$, which is realized in singlet scalar extensions of the SM. 
 
-Despite our simplifying assumption, one should keep the more general possibility in mind, as even simple extensions of the mediating sector can result in $g_u \neq g_d \neq g_\ell$. A well-known realization of this would be the coupling of the pseudoscalar to up-type quarks (proportional to $m_u \cot\beta$) and down-type quarks and charged leptons (proportional to $m_{d/\ell}\tan\beta$) in two-Higgs doublet extensions of the SM. Here $\tan \beta$ denoting the ratio of vacuum expectation values of the two Higgs doublets. %The case $g_u \neq  g_d \neq g_\ell$ requires additional scalars with potentially large masses. 
-This possibility of non-equal couplings motivates searches in complementary channels which probe couplings to different flavors of quarks and leptons.
+% Despite our simplifying assumption, one should keep the more general possibility in mind, as even simple extensions of the mediating sector can result in $g_u \neq g_d \neq g_\ell$. A well-known realization of this would be the coupling of the pseudoscalar to up-type quarks (proportional to $m_u \cot\beta$) and down-type quarks and charged leptons (proportional to $m_{d/\ell}\tan\beta$) in two-Higgs doublet extensions of the SM. Here $\tan \beta$ denoting the ratio of vacuum expectation values of the two Higgs doublets. %The case $g_u \neq  g_d \neq g_\ell$ requires additional scalars with potentially large masses. 
+% This possibility of non-equal couplings motivates searches in complementary channels which probe couplings to different flavors of quarks and leptons.
 
 %Extending the SM Higgs sector to a two Higgs doublet model implies more complex couplings such as  $g_u = \cot \beta$ and $g_d = g_e = \tan \beta$ where $\tan \beta$ denotes the ratio of vacuum expectation values of the two Higgs doublets.  The case $g_u \neq  g_d \neq g_\ell$ requires more additional scalars with potentially large masses, and it is not covered here: for simplicity, we assume universal SM-mediator couplings $g_v = g_u = g_d = g_\ell$ in the remainder of this work. 
 
@@ -428,27 +418,39 @@ This possibility of non-equal couplings motivates searches in complementary chan
 %\end{align}
 %where $v=246$~\gev denotes the Higgs vacuum expectation value.
 
-We choose the minimal mediator width given by %Eq.\,\ref{eq:monojet_min},
-\begin{equation} \label{eq:width}
-\begin{split}
-\Gamma_{\phi,a}  = & \sum_f N_c \frac{y_f^2 g_v^2 m_{\phi,a}}{16 \pi} \left(1-\frac{4 m_f^2}{m_{\phi,a}^2}\right)^{x/2}
-+ \frac{g_\chiDM^2 m_{\phi,a}}{8 \pi} \left(1-\frac{4 m_\chiDM^2}{m_{\phi,a}^2}\right)^{x/2}\\
-& + \frac{\alpha_s^2 y_t^2 g_v^2 m_{\phi,a}^3}{32 \pi^3 v^2} \left| f_{\phi,a}\left(\tfrac{4m_t^2}{m_{\phi,a}^2} \right)\right|^2
-\end{split}
-\end{equation}
-where $x=3$ for scalars and $x=1$ for pseudoscalars, and the loop integrals are
+The minimal mediator width is given by %Eq.\,\ref{eq:monojet_min},
+\begin{fullwidth}
+  \begin{equation} \label{eq:width}
+    \begin{split}
+      \Gamma_{\phi,a} = & \sum_f N_c \frac{y_f^2 g_v^2 m_{\phi,a}}{16
+        \pi} \left(1-\frac{4 m_f^2}{m_{\phi,a}^2}\right)^{x/2}
+      + \frac{g_\chiDM^2 m_{\phi,a}}{8 \pi} \left(1-\frac{4 m_\chiDM^2}{m_{\phi,a}^2}\right)^{x/2}\\
+      & + \frac{\alpha_s^2 y_t^2 g_v^2 m_{\phi,a}^3}{32 \pi^3 v^2}
+      \left| f_{\phi,a}\left(\tfrac{4m_t^2}{m_{\phi,a}^2}
+        \right)\right|^2
+    \end{split}
+  \end{equation}
+\end{fullwidth}
+where $x=3$ for scalars and $x=1$ for pseudoscalars. The loop integrals are
 
-\bea \label{eq:fphifa}
-f_\phi (\tau) = \tau \left [ 1+ (1-\tau) \arctan^2 \left ( \frac{1}{\sqrt{\tau-1}} \right ) \right ]  \,, \qquad 
-f_a (\tau) =  \tau \arctan^2 \left ( \frac{1}{\sqrt{\tau-1}} \right) \, 
-\eea
-where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for $\tau > 1$, 
-\bea \label{eq:fphifb}
-f_\phi (\tau) = \tau \left [ 1+ (1-\tau)\left(-\frac{1}{4}\left(\log\frac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}}+i\pi\right)^2\right) \right ]  \,\,, 
-f_a (\tau) =  \tau \left(-\frac{1}{4}\left(\log\frac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}}+i\pi\right)^2\right).
-\eea
+\begin{fullwidth}
+  \bea \label{eq:fphifa}
+  f_\phi (\tau) &=& \tau \left [ 1+ (1-\tau) \arctan^2 \left ( \frac{1}{\sqrt{\tau-1}} \right ) \right ]  \,, \\
+  f_a (\tau) &=& \tau \arctan^2 \left ( \frac{1}{\sqrt{\tau-1}}
+  \right) \, 
+  \eea
+\end{fullwidth}
+ where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for $\tau > 1$, 
+\begin{fullwidth}
+  \bea \label{eq:fphifb}
+  f_\phi (\tau) &=& \tau \left [ 1+ (1-\tau)\left(-\frac{1}{4}\left(\log\frac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}}+i\pi\right)^2\right) \right ]  \,\,,\\
+  f_a (\tau) &=& \tau
+  \left(-\frac{1}{4}\left(\log\frac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}}+i\pi\right)^2\right).
+  \eea
+\end{fullwidth}
 
-The first term in the width corresponds to the decay into SM fermions, and the sum runs over all kinematically available fermions, $N_c = 3$ for quarks. The second term is the decay into DM, assuming that is kinematically allowed. The factor of two between the decay into SM  fermions and into DM  is a result of our choice of normalization of the Yukawa couplings due to spin dependencies. The last term corresponds to decay into gluons.  Since we have assumed that $\gq = g_u = g_d = g_\ell$, we have included in the partial decay widths $\Gamma (\phi/a \to gg)$ only the contributions stemming from top loops, which provide the by far largest corrections given that $y_t \gg y_b$~etc. At the loop level the mediators can decay not only to gluons but also to pairs of photons and other final states if kinematical accessible. However the decay rates $\Gamma (\phi/a \to gg)$ are always larger than the other loop-induced partial widths, and in consequence the total decay widths $\Gamma_{\phi/a}$ are well approximated by the corresponding sum of the individual partial decay widths involving DM, fermion or gluon pairs. It should be noted that if  $m_{\phi/a} > 2m_t$ the total widths of $\phi/a$ will typically be dominated by the partial widths to top quarks.
+% If this is in the DM@LHC write-up, it is unnecessary here.
+% The first term in the width corresponds to the decay into SM fermions, and the sum runs over all kinematically available fermions, $N_c = 3$ for quarks. The second term is the decay into DM, assuming that is kinematically allowed. The factor of two between the decay into SM  fermions and into DM  is a result of our choice of normalization of the Yukawa couplings due to spin dependencies. The last term corresponds to decay into gluons.  Since we have assumed that $\gq = g_u = g_d = g_\ell$, we have included in the partial decay widths $\Gamma (\phi/a \to gg)$ only the contributions stemming from top loops, which provide the by far largest corrections given that $y_t \gg y_b$~etc. At the loop level the mediators can decay not only to gluons but also to pairs of photons and other final states if kinematical accessible. However the decay rates $\Gamma (\phi/a \to gg)$ are always larger than the other loop-induced partial widths, and in consequence the total decay widths $\Gamma_{\phi/a}$ are well approximated by the corresponding sum of the individual partial decay widths involving DM, fermion or gluon pairs. It should be noted that if  $m_{\phi/a} > 2m_t$ the total widths of $\phi/a$ will typically be dominated by the partial widths to top quarks.
 
 
 %\begin{equation}
@@ -496,7 +498,7 @@ The first term in the width corresponds to the decay into SM fermions, and the s
 
 %%%End Matt Buckley's edits
 
-The minimal width for scalar and pseudo-scalar mediators with $\gq=\gDM=1$ are shown in Fig.\,\ref{fig:monojet_width_S}, illustrating the effect of choosing
+The minimal widths for scalar and pseudo-scalar mediators with $\gq=\gDM=1$ are shown in Fig.\,\ref{fig:monojet_width_S}, illustrating the effect of choosing
 the SM Higgs-like Yukawa couplings for the SM fermions.
 For the mediator mass above twice the top quark mass $m_t$, the minimal width receives the dominant contribution from the top quark. For lighter mediator masses, Dark Matter dominates as the couplings to lighter quarks are Yukawa suppressed.
 %Note that the partial width coming from gluons through loops can be safely neglected\,\cite{Haisch:2015ioa}.
@@ -769,7 +771,7 @@ The cross section for the sample with couplings $\gq$ and $\gDM$ and modified me
 \end{equation}
 The advantage of doing this is in the fact that no event selection and detector response needs to be simulated since the changes in couplings do not have an effect on the shapes of kinematic distributions.
 
-It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the \modelV and \modelA case, one quickly breaks this approxmation even for small $n$.
+It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the \modelDMV and \modelDMA case, one quickly breaks this approxmation even for small $n$.
 
 
 \section{Colored scalar mediator, \tchannel exchange}
