--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -181,7 +181,7 @@ for final states including heavy flavor quarks, leaving the implementation
 details to appendix~\ref{app:TTBar_Xsecs}.  
 Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
 recommendations and choices for final states containing an electroweak 
-boson ($W/Z/gamma/H$). 
+boson ($W/Z/\gamma/H$). 
 Simplified models from chapter~\ref{subsec:MonojetLikeModels}
 are considered, together with specific simplified models leading to mono-boson signatures
 and contact interaction operators wherever simplified models are not available. 
